Adjust spacing on div#flash. Fixes #553

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -146,6 +146,11 @@ form {
   float: right;
 }
 
+#flash {
+  .container;
+  margin-top: 1em;
+}
+
 @import "common/nav.less";
 @import "DocumentSet/index.less";
 @import "DocumentSet/show.less";
